{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 404,
  "lineage": "e5663617-0e7a-ec40-91e4-6e4a36f880e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_serverless_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480391725083:security-group/sg-0e211170a69791a73",
            "description": "security group for serverless wordpress mysql aurora",
            "egress": [],
            "id": "sg-0e211170a69791a73",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress on mySQL port to Aurora Serverless",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03406daa1e535ce6b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "raffaelesollecito.it_aurora_mysql_sg",
            "name_prefix": "",
            "owner_id": "480391725083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d505e22c17c75197"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480391725083:security-group/sg-0267e429d467a0587",
            "description": "security group for wordpress",
            "egress": [],
            "id": "sg-0267e429d467a0587",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress to EFS mount from Wordpress container",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03406daa1e535ce6b"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "raffaelesollecitowebsite_efs_sg",
            "name_prefix": "",
            "owner_id": "480391725083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d505e22c17c75197"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480391725083:security-group/sg-03406daa1e535ce6b",
            "description": "security group for wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress from Wordpress container to world on HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress from Wordpress container to world on HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Egress from Wordpress container to Aurora Database",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e211170a69791a73"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Egress to EFS mount from Wordpress container",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0267e429d467a0587"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "id": "sg-03406daa1e535ce6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ingress from world to Wordpress container",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "raffaelesollecitowebsite_wordpress_sg",
            "name_prefix": "",
            "owner_id": "480391725083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d505e22c17c75197"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_sg_ingress_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress on mySQL port to Aurora Serverless",
            "from_port": 3306,
            "id": "sgrule-4001588204",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e211170a69791a73",
            "self": false,
            "source_security_group_id": "sg-03406daa1e535ce6b",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora_serverless_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress to EFS mount from Wordpress container",
            "from_port": 2049,
            "id": "sgrule-1275059422",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0267e429d467a0587",
            "self": false,
            "source_security_group_id": "sg-03406daa1e535ce6b",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_security_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_2049",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Egress to EFS mount from Wordpress container",
            "from_port": 2049,
            "id": "sgrule-869387569",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03406daa1e535ce6b",
            "self": false,
            "source_security_group_id": "sg-0267e429d467a0587",
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_security_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Egress from Wordpress container to Aurora Database",
            "from_port": 3306,
            "id": "sgrule-1248051823",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03406daa1e535ce6b",
            "self": false,
            "source_security_group_id": "sg-0e211170a69791a73",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora_serverless_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress from Wordpress container to world on HTTPS",
            "from_port": 443,
            "id": "sgrule-328533285",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03406daa1e535ce6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress from Wordpress container to world on HTTP",
            "from_port": 80,
            "id": "sgrule-202450992",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03406daa1e535ce6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_ingress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ingress from world to Wordpress container",
            "from_port": 80,
            "id": "sgrule-2765554384",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03406daa1e535ce6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.codebuild",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codebuild_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480391725083:security-group/sg-032e400e49d107e84",
            "description": "security group for codebuild",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032e400e49d107e84",
            "ingress": [],
            "name": "raffaelesollecitowebsite_codebuild_sg",
            "name_prefix": "",
            "owner_id": "480391725083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d505e22c17c75197"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}